--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,70 @@
-fastapi==0.38.1
-uvicorn==0.9.0
+aiofiles               0.5.0
+alembic                1.4.0
+aniso8601              7.0.0
+appdirs                1.4.3
+astroid                2.4.2
+async-exit-stack       1.0.1
+async-generator        1.10
+certifi                2019.11.28
+chardet                3.0.4
+Click                  7.0
+colorama               0.4.4
+distlib                0.3.0
+dnspython              2.1.0
+email-validator        1.1.2
+fastapi                0.63.0
+filelock               3.0.12
+Flask                  0.12.2
+Flask-Markdown         0.3
+flask-marshmallow      0.8.0
+Flask-Migrate          2.1.1
+Flask-RESTful          0.3.6
+Flask-Script           2.0.6
+Flask-SQLAlchemy       2.3.2
+graphene               2.1.8
+graphql-core           2.3.2
+graphql-relay          2.0.1
+h11                    0.12.0
+idna                   2.10
+isort                  5.7.0
+itsdangerous           1.1.0
+Jinja2                 2.11.3
+lazy-object-proxy      1.4.3
+Mako                   1.1.1
+Markdown               3.2.2
+MarkupSafe             1.1.1
+marshmallow            2.14.0
+marshmallow-sqlalchemy 0.13.2
+mccabe                 0.6.1
+mysql-connector-python 8.0.19
+orjson                 3.4.8
+pip                    20.0.2
+pipenv                 2018.11.26
+promise                2.3
+psycopg2               2.8.4
+psycopg2-binary        2.8.4
+pydantic               1.7.3
+pylint                 2.6.0
+python-dateutil        2.8.1
+python-dotenv          0.15.0
+python-editor          1.0.4
+python-multipart       0.0.5
+pytz                   2019.3
+PyYAML                 5.4.1
+requests               2.24.0
+Rx                     1.6.1
+selenium               3.141.0
+setuptools             41.2.0
+six                    1.14.0
+SQLAlchemy             1.3.13
+starlette              0.13.6
+toml                   0.10.2
+ujson                  3.2.0
+urllib3                1.25.9
+uvicorn                0.13.3
+virtualenv             20.0.5
+virtualenv-clone       0.5.3
+watchgod               0.6
+websockets             8.1
+Werkzeug               1.0.0
+wrapt                  1.12.1
