--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi                0.63.0
-promise                2.3
-psycopg2-binary        2.8.4
-python-dotenv          0.15.0
-requests               2.24.0
-uvicorn                0.13.3
+fastapi 0.63.0
+promise 2.3
+psycopg2-binary 2.8.4
+python-dotenv 0.15.0
+requests 2.24.0
+uvicorn 0.13.3
+pydantic 1.7.3
